--- a/Minecraft_QQ.NewGui/Style/TextBlock.axaml
+++ b/Minecraft_QQ.NewGui/Style/TextBlock.axaml
@@ -12,6 +12,7 @@
 
     <Style Selector="TextBlock">
         <Setter Property="Foreground" Value="{setting:Colors Font}" />
+        <Setter Property="VerticalAlignment" Value="Center" />
     </Style>
 
 </Styles>
